began exploration of dates

--- a/eBay_Klein/eBay_auto_sales_analysis.ipynb
+++ b/eBay_Klein/eBay_auto_sales_analysis.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 53,
    "id": "2d3c91f4",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 54,
    "id": "d9db55db",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 55,
    "id": "4fa28f05",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 56,
    "id": "e1fa1ba8",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
        "4  2016-04-01 14:38:50  "
       ]
      },
-     "execution_count": 403,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 57,
    "id": "53c7aa44",
    "metadata": {},
    "outputs": [
@@ -677,7 +677,7 @@
        "49999  2016-04-06 21:18:48  "
       ]
      },
-     "execution_count": 404,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 58,
    "id": "47b0d2fc",
    "metadata": {},
    "outputs": [
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 59,
    "id": "969ad268",
    "metadata": {},
    "outputs": [
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 60,
    "id": "9c25cacd",
    "metadata": {},
    "outputs": [
@@ -870,7 +870,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 407,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 61,
    "id": "4c863f15",
    "metadata": {},
    "outputs": [
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 62,
    "id": "ea776072",
    "metadata": {},
    "outputs": [
@@ -1304,7 +1304,7 @@
        "max                     NaN         0.000  99,998.000                  NaN  "
       ]
      },
-     "execution_count": 409,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 63,
    "id": "ac115863",
    "metadata": {},
    "outputs": [],
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 64,
    "id": "e24457a7",
    "metadata": {},
    "outputs": [
@@ -1415,7 +1415,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 411,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 65,
    "id": "0d650ef8",
    "metadata": {},
    "outputs": [
@@ -1473,7 +1473,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 412,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 66,
    "id": "da816089",
    "metadata": {},
    "outputs": [
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 67,
    "id": "af43acca",
    "metadata": {},
    "outputs": [],
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 68,
    "id": "493b1a05",
    "metadata": {},
    "outputs": [],
@@ -1552,13 +1552,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 69,
    "id": "9908ba2e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert columns to the right data types\n",
-    "\n",
     "autos[\"odometer\"] = autos[\"odometer\"].str.replace(\"[^0-9.]\", \"\", regex = True).astype(int)\n",
     "autos[\"price\"] = autos[\"price\"].str.replace(\"[^0-9.]\", \"\", regex = True).astype(float)\n",
     "\n",
@@ -1603,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 70,
    "id": "7911f60f",
    "metadata": {},
    "outputs": [
@@ -1613,7 +1612,7 @@
        "13"
       ]
      },
-     "execution_count": 417,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1624,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 71,
    "id": "bdd145b3",
    "metadata": {},
    "outputs": [
@@ -1642,7 +1641,7 @@
        "Name: odometer_km, dtype: float64"
       ]
      },
-     "execution_count": 418,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1653,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 72,
    "id": "4cc88d4e",
    "metadata": {},
    "outputs": [
@@ -1676,7 +1675,7 @@
        "Name: odometer_km, dtype: int64"
       ]
      },
-     "execution_count": 419,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1687,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 73,
    "id": "d8690b20",
    "metadata": {},
    "outputs": [
@@ -1710,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 74,
    "id": "83c6db8e",
    "metadata": {},
    "outputs": [
@@ -1742,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 75,
    "id": "e85b63e9",
    "metadata": {},
    "outputs": [
@@ -1752,7 +1751,7 @@
        "2323"
       ]
      },
-     "execution_count": 422,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1763,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 76,
    "id": "1dd6b930",
    "metadata": {},
    "outputs": [
@@ -1781,7 +1780,7 @@
        "Name: price, dtype: float64"
       ]
      },
-     "execution_count": 423,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1792,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 77,
    "id": "f146e7e2",
    "metadata": {},
    "outputs": [
@@ -1812,7 +1811,7 @@
        "Name: price, dtype: int64"
       ]
      },
-     "execution_count": 424,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1823,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 78,
    "id": "26f0f6da",
    "metadata": {},
    "outputs": [
@@ -1848,7 +1847,7 @@
        "Name: price, dtype: int64"
       ]
      },
-     "execution_count": 425,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1868,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 79,
    "id": "810d09bc",
    "metadata": {},
    "outputs": [
@@ -1887,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 80,
    "id": "011972cb",
    "metadata": {},
    "outputs": [
@@ -1905,7 +1904,7 @@
        "Name: price, dtype: float64"
       ]
      },
-     "execution_count": 427,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1916,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 81,
    "id": "fba5cb52",
    "metadata": {},
    "outputs": [],
@@ -1932,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 82,
    "id": "d6095d58",
    "metadata": {},
    "outputs": [
@@ -1955,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 83,
    "id": "d8e01831",
    "metadata": {},
    "outputs": [
@@ -1972,6 +1971,63 @@
     "autos = autos[autos.price < threshold]\n",
     "\n",
     "#Verify rows were dropped\n",
+    "print(len(autos))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "2ae4faf1",
+   "metadata": {},
+   "source": [
+    "**Column:** `registration_year`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "29d2dfa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count   48,306.000\n",
+       "mean     2,004.697\n",
+       "std         99.963\n",
+       "min      1,910.000\n",
+       "25%      1,999.000\n",
+       "50%      2,003.000\n",
+       "75%      2,008.000\n",
+       "max      9,999.000\n",
+       "Name: registration_year, dtype: float64"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autos[\"registration_year\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "f9d519d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46399\n"
+     ]
+    }
+   ],
+   "source": [
+    "autos = autos[autos[\"registration_year\"] <= 2016]\n",
     "print(len(autos))"
    ]
   },
@@ -2024,17 +2080,63 @@
    "id": "c14145e8",
    "metadata": {},
    "source": [
-    "### Exploring `odometer_km`"
+    "### Exploring `date_crawled`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "1da79ee9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2016-03-05   0.025\n",
+       "2016-03-06   0.014\n",
+       "2016-03-07   0.036\n",
+       "2016-03-08   0.034\n",
+       "2016-03-09   0.033\n",
+       "2016-03-10   0.032\n",
+       "2016-03-11   0.032\n",
+       "2016-03-12   0.037\n",
+       "2016-03-13   0.016\n",
+       "2016-03-14   0.036\n",
+       "2016-03-15   0.034\n",
+       "2016-03-16   0.029\n",
+       "2016-03-17   0.032\n",
+       "2016-03-18   0.013\n",
+       "2016-03-19   0.035\n",
+       "2016-03-20   0.038\n",
+       "2016-03-21   0.037\n",
+       "2016-03-22   0.032\n",
+       "2016-03-23   0.032\n",
+       "2016-03-24   0.029\n",
+       "2016-03-25   0.032\n",
+       "2016-03-26   0.032\n",
+       "2016-03-27   0.031\n",
+       "2016-03-28   0.034\n",
+       "2016-03-29   0.034\n",
+       "2016-03-30   0.034\n",
+       "2016-03-31   0.032\n",
+       "2016-04-01   0.034\n",
+       "2016-04-02   0.035\n",
+       "2016-04-03   0.039\n",
+       "2016-04-04   0.037\n",
+       "2016-04-05   0.013\n",
+       "2016-04-06   0.003\n",
+       "2016-04-07   0.001\n",
+       "Name: date_crawled, dtype: float64"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code and visualization"
+    "autos_crawl_dates = autos[\"date_crawled\"].str[:10]\n",
+    "autos_crawl_dates.value_counts(normalize=True, dropna=False).sort_index()\n"
    ]
   },
   {
@@ -2044,9 +2146,9 @@
    "metadata": {},
    "source": [
     "**Observations**\n",
-    "- Ob 1\n",
-    "- Ob 2\n",
-    "- Ob 3"
+    "- Dates crawled range from 2016-03-05 to 2016-04-07\n",
+    "- The final two days of crawling yielded very few entries\n",
+    "- the vast majority of the dataset falls over the course of a month"
    ]
   },
   {
@@ -2055,7 +2157,290 @@
    "id": "1cdae7c7",
    "metadata": {},
    "source": [
-    "### Exploring `prices`"
+    "### Exploring `ad_created`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "7333795a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2015-08-10       1\n",
+       "2015-09-09       1\n",
+       "2015-11-10       1\n",
+       "2015-12-05       1\n",
+       "2015-12-30       1\n",
+       "              ... \n",
+       "2016-04-03    1815\n",
+       "2016-04-04    1724\n",
+       "2016-04-05     541\n",
+       "2016-04-06     145\n",
+       "2016-04-07      61\n",
+       "Name: ad_created, Length: 73, dtype: int64"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autos_creation_dates = autos[\"ad_created\"].str[:10]\n",
+    "sorted_creation_dates = autos_creation_dates.value_counts(dropna=False).sort_index()\n",
+    "sorted_creation_dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "17dfb079",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2015-08-10    1\n",
+       "2015-09-09    1\n",
+       "2015-11-10    1\n",
+       "2015-12-05    1\n",
+       "2015-12-30    1\n",
+       "2016-01-03    1\n",
+       "2016-01-07    1\n",
+       "2016-01-10    2\n",
+       "2016-01-13    1\n",
+       "2016-01-14    1\n",
+       "2016-01-16    1\n",
+       "2016-01-27    2\n",
+       "2016-02-01    1\n",
+       "2016-02-02    2\n",
+       "2016-02-05    2\n",
+       "2016-02-07    1\n",
+       "2016-02-08    1\n",
+       "2016-02-09    2\n",
+       "2016-02-11    1\n",
+       "2016-02-12    3\n",
+       "Name: ad_created, dtype: int64"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_creation_dates[:20]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "56d4c263",
+   "metadata": {},
+   "source": [
+    "**Observations**\n",
+    "- The ads were created between 2015-08-10 to 2016-04-07\n",
+    "- Only a small handful of entries from 2015 were still listed\n",
+    "- January 10 is when you start to see multiple listings created per day"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1f44b690",
+   "metadata": {},
+   "source": [
+    "### Exploring `last_seen`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "2176a0cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2016-03-05   0.001\n",
+       "2016-03-06   0.004\n",
+       "2016-03-07   0.005\n",
+       "2016-03-08   0.008\n",
+       "2016-03-09   0.010\n",
+       "2016-03-10   0.011\n",
+       "2016-03-11   0.013\n",
+       "2016-03-12   0.024\n",
+       "2016-03-13   0.009\n",
+       "2016-03-14   0.013\n",
+       "2016-03-15   0.016\n",
+       "2016-03-16   0.016\n",
+       "2016-03-17   0.028\n",
+       "2016-03-18   0.007\n",
+       "2016-03-19   0.016\n",
+       "2016-03-20   0.021\n",
+       "2016-03-21   0.021\n",
+       "2016-03-22   0.021\n",
+       "2016-03-23   0.019\n",
+       "2016-03-24   0.020\n",
+       "2016-03-25   0.019\n",
+       "2016-03-26   0.017\n",
+       "2016-03-27   0.016\n",
+       "2016-03-28   0.021\n",
+       "2016-03-29   0.022\n",
+       "2016-03-30   0.025\n",
+       "2016-03-31   0.024\n",
+       "2016-04-01   0.024\n",
+       "2016-04-02   0.025\n",
+       "2016-04-03   0.026\n",
+       "2016-04-04   0.024\n",
+       "2016-04-05   0.124\n",
+       "2016-04-06   0.221\n",
+       "2016-04-07   0.130\n",
+       "Name: last_seen, dtype: float64"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autos_creation_dates = autos[\"last_seen\"].str[:10]\n",
+    "sorted_last_seen_dates = autos_creation_dates.value_counts(normalize=True, dropna=False).sort_index()\n",
+    "sorted_last_seen_dates"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "47d51179",
+   "metadata": {},
+   "source": [
+    "**Observations**\n",
+    "- Last seen dates match up with the dates_crawled\n",
+    "- No apparent outliers"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "2929d693",
+   "metadata": {},
+   "source": [
+    "### Exploring `registration_year`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "be020d68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count   46,399.000\n",
+       "mean     2,002.788\n",
+       "std          6.921\n",
+       "min      1,910.000\n",
+       "25%      1,999.000\n",
+       "50%      2,003.000\n",
+       "75%      2,007.000\n",
+       "max      2,016.000\n",
+       "Name: registration_year, dtype: float64"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autos[\"registration_year\"].describe()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "51290fd7",
+   "metadata": {},
+   "source": [
+    "**Observations**\n",
+    "- Registration years range from 1910-2016\n",
+    "- Mean of 2002 would indicate cars listed are on average 14 years old"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6b4a8c58",
+   "metadata": {},
+   "source": [
+    "### Exploring `price` by `brand`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "318bf1b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "volkswagen        9939\n",
+       "opel              5080\n",
+       "bmw               5067\n",
+       "mercedes_benz     4387\n",
+       "audi              3949\n",
+       "ford              3275\n",
+       "renault           2231\n",
+       "peugeot           1404\n",
+       "fiat              1208\n",
+       "seat               859\n",
+       "skoda              755\n",
+       "mazda              714\n",
+       "nissan             709\n",
+       "smart              663\n",
+       "citroen            659\n",
+       "toyota             590\n",
+       "hyundai            468\n",
+       "volvo              440\n",
+       "sonstige_autos     418\n",
+       "mini               404\n",
+       "mitsubishi         380\n",
+       "honda              368\n",
+       "kia                339\n",
+       "alfa_romeo         310\n",
+       "suzuki             279\n",
+       "chevrolet          256\n",
+       "chrysler           170\n",
+       "porsche            141\n",
+       "dacia              121\n",
+       "daihatsu           117\n",
+       "subaru             103\n",
+       "jeep                99\n",
+       "saab                77\n",
+       "land_rover          75\n",
+       "jaguar              71\n",
+       "daewoo              70\n",
+       "rover               64\n",
+       "trabant             62\n",
+       "lancia              51\n",
+       "lada                27\n",
+       "Name: brand, dtype: int64"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autos[\"brand\"].value_counts()"
    ]
   },
   {
@@ -2074,6 +2459,14 @@
    "source": [
     "# 5"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a13fcd5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
