--- a/i94-traffic/i94-traffic.ipynb
+++ b/i94-traffic/i94-traffic.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 114,
    "id": "2d3c91f4",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 115,
    "id": "d9db55db",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 116,
    "id": "4fa28f05",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 117,
    "id": "e1fa1ba8",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
        "4       broken clouds  2012-10-02 13:00:00            4918  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 118,
    "id": "53c7aa44",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
        "48203         overcast clouds  2018-09-30 23:00:00             954  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 119,
    "id": "47b0d2fc",
    "metadata": {},
    "outputs": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 120,
    "id": "969ad268",
    "metadata": {},
    "outputs": [
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 121,
    "id": "9c25cacd",
    "metadata": {},
    "outputs": [
@@ -904,7 +904,7 @@
        "48173          overcast clouds  2018-09-29 19:00:00            3818  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 122,
    "id": "4c863f15",
    "metadata": {},
    "outputs": [
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 123,
    "id": "ea776072",
    "metadata": {},
    "outputs": [
@@ -1169,7 +1169,7 @@
        "max                    NaN                  NaN       7,280.000  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 124,
    "id": "4aa93e76",
    "metadata": {},
    "outputs": [],
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 125,
    "id": "e24457a7",
    "metadata": {},
    "outputs": [
@@ -1292,7 +1292,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 126,
    "id": "0d650ef8",
    "metadata": {},
    "outputs": [
@@ -1339,7 +1339,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 127,
    "id": "da816089",
    "metadata": {},
    "outputs": [
@@ -1422,18 +1422,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 128,
    "id": "9908ba2e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert columns to the right data types\n",
-    "traffic['date_time'] = pd.to_datetime(traffic[col], infer_datetime_format=True)"
+    "traffic['date_time'] = pd.to_datetime(traffic['date_time'], infer_datetime_format=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 129,
    "id": "fdf8602c",
    "metadata": {},
    "outputs": [],
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 130,
    "id": "b1f72d31",
    "metadata": {},
    "outputs": [],
@@ -1464,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 131,
    "id": "f7e04985",
    "metadata": {},
    "outputs": [],
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 132,
    "id": "1033d2c7",
    "metadata": {},
    "outputs": [],
@@ -1494,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 133,
    "id": "db91817a",
    "metadata": {},
    "outputs": [
@@ -1503,19 +1503,19 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 48175 entries, 0 to 48174\n",
+      "RangeIndex: 48187 entries, 0 to 48186\n",
       "Data columns (total 9 columns):\n",
       " #   Column               Non-Null Count  Dtype         \n",
       "---  ------               --------------  -----         \n",
-      " 0   holiday              48175 non-null  object        \n",
-      " 1   temp_K               48175 non-null  float64       \n",
-      " 2   rain_mmph            48175 non-null  float64       \n",
-      " 3   snow_mmph            48175 non-null  float64       \n",
-      " 4   cloudcover           48175 non-null  int64         \n",
-      " 5   weather_main         48175 non-null  object        \n",
-      " 6   weather_description  48175 non-null  object        \n",
-      " 7   date_time            48175 non-null  datetime64[ns]\n",
-      " 8   traffic_volume       48175 non-null  int64         \n",
+      " 0   holiday              48187 non-null  object        \n",
+      " 1   temp_K               48187 non-null  float64       \n",
+      " 2   rain_mmph            48187 non-null  float64       \n",
+      " 3   snow_mmph            48187 non-null  float64       \n",
+      " 4   cloudcover           48187 non-null  int64         \n",
+      " 5   weather_main         48187 non-null  object        \n",
+      " 6   weather_description  48187 non-null  object        \n",
+      " 7   date_time            48187 non-null  datetime64[ns]\n",
+      " 8   traffic_volume       48187 non-null  int64         \n",
       "dtypes: datetime64[ns](1), float64(3), int64(2), object(3)\n",
       "memory usage: 3.3+ MB\n"
      ]
@@ -1536,16 +1536,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 134,
    "id": "1dd6b930",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count   48,175.000\n",
+       "count   48,187.000\n",
        "mean         0.334\n",
-       "std         44.803\n",
+       "std         44.797\n",
        "min          0.000\n",
        "25%          0.000\n",
        "50%          0.000\n",
@@ -1554,7 +1554,7 @@
        "Name: rain_mmph, dtype: float64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1574,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 135,
    "id": "581affc9",
    "metadata": {},
    "outputs": [
@@ -1583,10 +1583,10 @@
      "output_type": "stream",
      "text": [
       "      holiday  temp_K  rain_mmph  snow_mmph  cloudcover weather_main   \n",
-      "24865      na 302.110  9,831.300      0.000          75         Rain  \\\n",
+      "24870      na 302.110  9,831.300      0.000          75         Rain  \\\n",
       "\n",
-      "      weather_description  date_time  traffic_volume  \n",
-      "24865     very heavy rain 1970-01-01            5535  \n"
+      "      weather_description           date_time  traffic_volume  \n",
+      "24870     very heavy rain 2016-07-11 17:00:00            5535  \n"
      ]
     }
    ],
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 136,
    "id": "651e705f",
    "metadata": {},
    "outputs": [
@@ -1604,7 +1604,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "48174\n"
+      "48186\n"
      ]
     }
    ],
@@ -1658,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 137,
    "id": "1da79ee9",
    "metadata": {},
    "outputs": [],
